@@ -1,10 +1,10 @@
 package com.beyond.qiin.domain.iam.support.userrole;
 
+import com.beyond.qiin.domain.iam.entity.UserRole;
 import com.beyond.qiin.domain.iam.exception.RoleException;
 import com.beyond.qiin.domain.iam.repository.UserRoleJpaRepository;
-import com.beyond.qiin.domain.iam.support.rolepermission.RolePermissionReader;
+import com.beyond.qiin.internal.auth.dto.UserRoleContextDto;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
@@ -13,24 +13,20 @@ import org.springframework.stereotype.Component;
 public class UserRoleReader {
 
     private final UserRoleJpaRepository userRoleJpaRepository;
-    private final RolePermissionReader rolePermissionReader;
 
-    public String findRoleNameByUserId(final Long userId) {
-        return userRoleJpaRepository
-                .findTopByUser_Id(userId)
-                .map(ur -> ur.getRole().getRoleName())
-                .orElseThrow(RoleException::roleNotFound);
-    }
+    // 사용자 → Role → Permission 리스트 조회(로그인 시 사용)
+    public UserRoleContextDto readUserRoleContext(final Long userId) {
 
-    // 사용자 → Role → Permission 리스트 조회
-    public List<String> findPermissionsByUserId(final Long userId) {
-        return userRoleJpaRepository
-                .findTopByUser_Id(userId)
-                .map(ur -> rolePermissionReader.findAllByRole(ur.getRole()))
-                .orElseThrow(RoleException::roleNotFound)
-                .stream()
+        UserRole ur =
+                userRoleJpaRepository.findUserRoleWithPermissions(userId).orElseThrow(RoleException::roleNotFound);
+
+        String roleName = ur.getRole().getRoleName();
+
+        List<String> permissions = ur.getRole().getRolePermissions().stream()
                 .map(rp -> rp.getPermission().getPermissionName())
-                .collect(Collectors.toList());
+                .toList();
+
+        return UserRoleContextDto.of(roleName, permissions);
     }
 
     public boolean existsMaster() {
